source/errpy/tests/test_resources/invalid_syntax_tests/invalid_match_case.pytest
# Copyright (c) Meta Platforms, Inc. and affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree

## cannot use general expression in place of a case pattern
match xx:
    case x>2:
        pass

## various types of invalid complex numbers
match x:
    case  3j + 5j: # invalud, first part must be real
        pass
    case  -3j + 5j: # invalud, first part must be real
        pass
    case  3 + 5: #inlvauid, second part must be imaginary
        pass
    case  3 + -5j: # invalid imaginary number cannot be negative
        pass
